COMMERCE-1835 added modifiedDate field to WarehouseItem and new end point for extracting WarehouseItem by modifiedDate range
