# headless/headless-commerce/headless-commerce-admin-inventory-impl/src/main/java/com/liferay/headless/commerce/admin/inventory/internal/dto/v1_0/WarehouseItemDTOConverter.java
@@ -54,6 +54,7 @@ public class WarehouseItemDTOConverter implements DTOConverter {
 				id =
 					commerceInventoryWarehouseItem.
 						getCommerceInventoryWarehouseItemId();
+				modifiedDate = commerceInventoryWarehouseItem.getModifiedDate();
 				quantity = commerceInventoryWarehouseItem.getQuantity();
 				reservedQuantity =
 					commerceInventoryWarehouseItem.getReservedQuantity();
