# headless/headless-commerce/headless-commerce-admin-inventory-impl/src/main/java/com/liferay/headless/commerce/admin/inventory/internal/resource/v1_0/BaseWarehouseItemResourceImpl.java
@@ -45,6 +45,7 @@ import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.UriInfo;
@@ -62,16 +63,18 @@ public abstract class BaseWarehouseItemResourceImpl
 	@GET
 	@Parameters(
 		value = {
-			@Parameter(in = ParameterIn.PATH, name = "id"),
+			@Parameter(in = ParameterIn.QUERY, name = "start"),
+			@Parameter(in = ParameterIn.QUERY, name = "end"),
 			@Parameter(in = ParameterIn.QUERY, name = "page"),
 			@Parameter(in = ParameterIn.QUERY, name = "pageSize")
 		}
 	)
-	@Path("/warehouses/{id}/warehouseItems/")
+	@Path("/warehouseItems/updated")
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "WarehouseItem")})
-	public Page<WarehouseItem> getWarehousIdWarehouseItemsPage(
-			@NotNull @Parameter(hidden = true) @PathParam("id") Long id,
+	public Page<WarehouseItem> getWarehouseItemsUpdatedPage(
+			@Parameter(hidden = true) @QueryParam("start") java.util.Date start,
+			@Parameter(hidden = true) @QueryParam("end") java.util.Date end,
 			@Context Pagination pagination)
 		throws Exception {
 
@@ -79,18 +82,48 @@ public abstract class BaseWarehouseItemResourceImpl
 	}
 
 	@Override
-	@Consumes({"application/json", "application/xml"})
-	@POST
+	@DELETE
 	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "id")})
-	@Path("/warehouses/{id}/warehouseItems/")
+	@Path("/warehouseItems/{id}")
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "WarehouseItem")})
-	public WarehouseItem postWarehousIdWarehouseItem(
+	public Response deleteWarehouseItem(
+			@NotNull @Parameter(hidden = true) @PathParam("id") Long id)
+		throws Exception {
+
+		Response.ResponseBuilder responseBuilder = Response.ok();
+
+		return responseBuilder.build();
+	}
+
+	@Override
+	@GET
+	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "id")})
+	@Path("/warehouseItems/{id}")
+	@Produces({"application/json", "application/xml"})
+	@Tags(value = {@Tag(name = "WarehouseItem")})
+	public WarehouseItem getWarehouseItem(
+			@NotNull @Parameter(hidden = true) @PathParam("id") Long id)
+		throws Exception {
+
+		return new WarehouseItem();
+	}
+
+	@Override
+	@Consumes({"application/json", "application/xml"})
+	@PATCH
+	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "id")})
+	@Path("/warehouseItems/{id}")
+	@Produces({"application/json", "application/xml"})
+	@Tags(value = {@Tag(name = "WarehouseItem")})
+	public Response patchWarehouseItem(
 			@NotNull @Parameter(hidden = true) @PathParam("id") Long id,
 			WarehouseItem warehouseItem)
 		throws Exception {
 
-		return new WarehouseItem();
+		Response.ResponseBuilder responseBuilder = Response.ok();
+
+		return responseBuilder.build();
 	}
 
 	@Override
@@ -141,48 +174,38 @@ public abstract class BaseWarehouseItemResourceImpl
 	}
 
 	@Override
-	@DELETE
-	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "id")})
-	@Path("/warehouseItems/{id}")
-	@Produces({"application/json", "application/xml"})
-	@Tags(value = {@Tag(name = "WarehouseItem")})
-	public Response deleteWarehouseItem(
-			@NotNull @Parameter(hidden = true) @PathParam("id") Long id)
-		throws Exception {
-
-		Response.ResponseBuilder responseBuilder = Response.ok();
-
-		return responseBuilder.build();
-	}
-
-	@Override
 	@GET
-	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "id")})
-	@Path("/warehouseItems/{id}")
+	@Parameters(
+		value = {
+			@Parameter(in = ParameterIn.PATH, name = "id"),
+			@Parameter(in = ParameterIn.QUERY, name = "page"),
+			@Parameter(in = ParameterIn.QUERY, name = "pageSize")
+		}
+	)
+	@Path("/warehouses/{id}/warehouseItems/")
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "WarehouseItem")})
-	public WarehouseItem getWarehouseItem(
-			@NotNull @Parameter(hidden = true) @PathParam("id") Long id)
+	public Page<WarehouseItem> getWarehousIdWarehouseItemsPage(
+			@NotNull @Parameter(hidden = true) @PathParam("id") Long id,
+			@Context Pagination pagination)
 		throws Exception {
 
-		return new WarehouseItem();
+		return Page.of(Collections.emptyList());
 	}
 
 	@Override
 	@Consumes({"application/json", "application/xml"})
-	@PATCH
+	@POST
 	@Parameters(value = {@Parameter(in = ParameterIn.PATH, name = "id")})
-	@Path("/warehouseItems/{id}")
+	@Path("/warehouses/{id}/warehouseItems/")
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "WarehouseItem")})
-	public Response patchWarehouseItem(
+	public WarehouseItem postWarehousIdWarehouseItem(
 			@NotNull @Parameter(hidden = true) @PathParam("id") Long id,
 			WarehouseItem warehouseItem)
 		throws Exception {
 
-		Response.ResponseBuilder responseBuilder = Response.ok();
-
-		return responseBuilder.build();
+		return new WarehouseItem();
 	}
 
 	public void setContextCompany(Company contextCompany) {
